WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
167233
REGRESSION (
r208149
): Video details does not apear and missing scrubber in Control Center
https://bugs.webkit.org/show_bug.cgi?id=167233
Summary
REGRESSION (r208149): Video details does not apear and missing scrubber in Co...
Jer Noble
Reported
2017-01-20 00:01:07 PST
Video details does not apear and missing scrubber in Control Center
Attachments
Patch
(44.93 KB, patch)
2017-01-20 10:21 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(15.41 KB, patch)
2017-01-20 13:17 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(57.21 KB, patch)
2017-01-20 13:18 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(44.52 KB, patch)
2017-01-20 13:24 PST
,
Jer Noble
achristensen
: review+
Details
Formatted Diff
Diff
Patch for landing
(44.55 KB, patch)
2017-01-23 09:37 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2017-01-20 10:21:56 PST
Created
attachment 299353
[details]
Patch
Jer Noble
Comment 2
2017-01-20 10:24:00 PST
rdar://problem/29486368
Jer Noble
Comment 3
2017-01-20 13:17:41 PST
Created
attachment 299372
[details]
Patch
Jer Noble
Comment 4
2017-01-20 13:18:29 PST
Created
attachment 299373
[details]
Patch
Jer Noble
Comment 5
2017-01-20 13:24:11 PST
Created
attachment 299375
[details]
Patch
Alex Christensen
Comment 6
2017-01-20 13:49:16 PST
Comment on
attachment 299375
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=299375&action=review
> Source/WebCore/platform/audio/ios/MediaSessionManagerIOS.h:73 > + bool hasActiveNowPlayingSession() const override { return m_nowPlayingActive; }
final?
> Source/WebKit2/UIProcess/API/Cocoa/WKWebViewPrivate.h:318 > +- (void)_requestActiveNowPlayingSessionInfo WK_API_AVAILABLE(macosx(WK_MAC_TBA)); > +- (void)_handleActiveNowPlayingSessionInfoResponse:(BOOL)hasActiveSession title:(NSString *)title duration:(double)duration elapsedTime:(double)elapsedTime WK_API_AVAILABLE(macosx(WK_MAC_TBA));
These need a , ios(WK_IOS_TBA) I think this should have a completionHandler for when you get your result instead of making subclasses override a selector. That's an awful API design.
Jer Noble
Comment 7
2017-01-20 14:04:29 PST
(In reply to
comment #6
)
> Comment on
attachment 299375
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=299375&action=review
> > > Source/WebCore/platform/audio/ios/MediaSessionManagerIOS.h:73 > > + bool hasActiveNowPlayingSession() const override { return m_nowPlayingActive; } > > final?
Ok.
> > Source/WebKit2/UIProcess/API/Cocoa/WKWebViewPrivate.h:318 > > +- (void)_requestActiveNowPlayingSessionInfo WK_API_AVAILABLE(macosx(WK_MAC_TBA)); > > +- (void)_handleActiveNowPlayingSessionInfoResponse:(BOOL)hasActiveSession title:(NSString *)title duration:(double)duration elapsedTime:(double)elapsedTime WK_API_AVAILABLE(macosx(WK_MAC_TBA)); > > These need a , ios(WK_IOS_TBA)
Ok.
> I think this should have a completionHandler for when you get your result > instead of making subclasses override a selector. That's an awful API > design.
Indeed. I'll file a follow-up.
Jer Noble
Comment 8
2017-01-23 09:37:04 PST
Created
attachment 299519
[details]
Patch for landing
WebKit Commit Bot
Comment 9
2017-01-23 11:24:51 PST
Comment on
attachment 299519
[details]
Patch for landing Clearing flags on attachment: 299519 Committed
r211045
: <
http://trac.webkit.org/changeset/211045
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug