Source/WebKit2/UIProcess/PageClient.h
@@ -253,7 +253,6 @@ public:
     virtual void recommendedScrollbarStyleDidChange(WebCore::ScrollbarStyle) = 0;
     virtual void removeNavigationGestureSnapshot() = 0;
     virtual void handleControlledElementIDResponse(const String&) = 0;
-    virtual void handleActiveNowPlayingSessionInfoResponse(bool hasActiveSession, const String& title, double duration, double elapsedTime) = 0;
 
     virtual CGRect boundsOfLayerInLayerBackedWindowCoordinates(CALayer *) const = 0;
 
@@ -283,6 +282,10 @@ public:
 #endif // USE(APPKIT)
     virtual void setEditableElementIsFocused(bool) = 0;
 #endif // PLATFORM(MAC)
+
+#if PLATFORM(COCOA)
+    virtual void handleActiveNowPlayingSessionInfoResponse(bool hasActiveSession, const String& title, double duration, double elapsedTime) = 0;
+#endif
 
 #if PLATFORM(IOS)
     virtual void commitPotentialTapFailed() = 0;
